test/tests/compiler/8_loops/invalid_parse/extra_for_header_clause.plx
pub fn main(none) i32 {
    loop i: i32 = 0 .. i = i + 1 while i < 10 {
        ;
    }
    return 0
}
